<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp"
    android:orientation="horizontal"
    android:gravity="center_vertical">

    <ImageView
        android:id="@+id/imgCoin"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/coinImage" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bitcoin"
            android:textStyle="bold"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtSymbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btc"
            android:textSize="14sp"
            android:textColor="#777" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="end">

        <TextView
            android:id="@+id/txtPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textStyle="bold"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change"
            android:textSize="14sp"
            android:textColor="#4CAF50" /> <!-- default green -->
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="end">

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:src="@drawable/trash_bin"
            android:scaleType="fitCenter"
            android:background="@drawable/delete_bt_background"
            android:contentDescription="@string/delete"/>
    </LinearLayout>


</LinearLayout>