<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.Dashboard">

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/lineChart">

        <Button
            android:id="@+id/btn1D"
            android:text="@string/_1d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

        <Button
            android:id="@+id/btn7D"
            android:text="@string/_7d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

        <Button
            android:id="@+id/btn30D"
            android:text="@string/_30d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvDetailName"
        android:text="@string/bitcoin_btc"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/buttonContainer"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvDetailPrice"
        android:text="@string/_50_000_00"
        android:textSize="22sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvDetailName"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvDetailChange"
        android:text="@string/_5_2"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@id/tvDetailPrice"
        app:layout_constraintStart_toEndOf="@id/tvDetailPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvMarketCap"
        android:text="@string/market_cap_1_2b"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvDetailPrice"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChart"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp" />

    <ImageButton
        android:id="@+id/addWlBt"
        android:layout_width="80dp"
        android:layout_height="85dp"
        android:layout_margin="10dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/watchlist_bt_background"
        android:contentDescription="@string/add_to_watchlist"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/eye_watchlist" />
</androidx.constraintlayout.widget.ConstraintLayout>